<resources>
    <string name="app_name">Calculator-S</string>

    <string name="invalid_input">Invalid Input</string>

    <!--Number Pad-->
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="zero" translatable="false">0</string>
    <string name="dot" translatable="false">.</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="multi" translatable="false">×</string>
    <string name="div" translatable="false">÷</string>
    <string name="equals" translatable="false">=</string>
    <string name="del" translatable="false">DEL</string>
    <string name="clear">C</string>

    <!--Category Names-->
    <string name="text">Texts</string>
    <string name="photo">Photos</string>
    <string name="note">Notes</string>
    <string name="diary">Diary</string>

    <!--Set Pin Dialog-->
    <string name="haventSetPIN">You haven\'t set your PIN yet</string>
    <string name="setPin">Set PIN</string>
    <string name="okayButton">OK</string>
    <string name="notNowButton">Not Now</string>
    <string name="inputPIN">Enter your 4 digit PIN</string>
    <string name="wrongFormat">Enter only 4 digit numeric PIN</string>

    <!--Toast-->
    <string name="wontHaveAccess">You won\'t be able to use the hidden functions now</string>

    <!--Hidden Page Action Buttons-->
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>

    <!--SearchView-->
    <string name="inputKeyWord">Input Key Word To Search</string>

    <!--Settings Page-->
    <string name="visual_group_title">Visual</string>
    <string name="profile_group_title">Profile</string>
    <string name="reset_passwd">Reset PIN</string>
    <string name="night_mode_text">Night Mode</string>
    <string name="encrypt_passwd">Encrypt PIN</string>
</resources>
