<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="54sp"
        android:text="0"
        android:textColor="#330033"
        android:layout_span="4"
        android:gravity="right"
        android:background="@drawable/while_bg"/>

    <TableRow android:id="@+id/Row1" android:layout_weight="2" android:layout_marginTop="22sp" android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/seven"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/eight"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nine"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/plus"
            style="@style/Buttons"/>
    </TableRow>

    <TableRow android:id="@+id/Row2" android:layout_weight="2" android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/four"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/five"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/six"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/minus"
            style="@style/Buttons"/>
    </TableRow>

    <TableRow android:id="@+id/Row3" android:layout_weight="2" android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/one"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/two"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/three"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_multi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/multi"
            style="@style/Buttons"/>
    </TableRow>

    <TableRow android:id="@+id/Row4" android:layout_weight="2" android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_dot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dot"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/zero"
            android:layout_column="1"
            android:layout_span="2"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_div"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/div"
            style="@style/Buttons"/>
    </TableRow>

    <TableRow android:id="@+id/RowEqual" android:layout_weight="2" android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="C"
            android:layout_column="0"
            android:layout_span="2"
            android:background="@android:color/holo_red_light"
            android:layout_margin="6sp"
            style="@style/Buttons"/>

        <Button
            android:id="@+id/button_equals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="="
            android:layout_column="1"
            android:layout_span="2"
            style="@style/Buttons"/>

    </TableRow>


</LinearLayout>