<LinearLayout
    android:id="@+id/whole_page"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ViewFlipper
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="54sp"
                android:text="0"
                android:textColor="#330033"
                android:layout_span="4"
                android:gravity="right|bottom"
                android:background="@drawable/while_bg"/>

            <TableRow android:id="@+id/Row1" android:layout_weight="2" android:layout_marginTop="22sp" android:gravity="center_horizontal">
                <Button
                    android:id="@+id/button_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/seven"
                    android:layout_column="0"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/eight"
                    android:layout_column="1"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nine"
                    android:layout_column="2"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/plus"
                    android:layout_column="3"
                    style="@style/Buttons"/>
            </TableRow>

            <TableRow android:id="@+id/Row2" android:layout_weight="2" android:gravity="center_horizontal">
                <Button
                    android:id="@+id/button_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/four"
                    android:layout_column="0"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/five"
                    android:layout_column="1"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/six"
                    android:layout_column="2"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/minus"
                    android:layout_column="3"
                    style="@style/Buttons"/>
            </TableRow>

            <TableRow android:id="@+id/Row3" android:layout_weight="2" android:gravity="center_horizontal">
                <Button
                    android:id="@+id/button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/one"
                    android:layout_column="0"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/two"
                    android:layout_column="1"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/three"
                    android:layout_column="2"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_multi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/multi"
                    android:layout_column="3"
                    style="@style/Buttons"/>
            </TableRow>

            <TableRow android:id="@+id/Row4" android:layout_weight="2" android:gravity="center_horizontal">
                <Button
                    android:id="@+id/button_dot"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dot"
                    android:layout_column="0"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/zero"
                    android:layout_column="1"
                    android:layout_span="2"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_div"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/div"
                    android:layout_column="2"
                    style="@style/Buttons"/>
            </TableRow>

            <TableRow android:id="@+id/RowEqual" android:layout_weight="2" android:gravity="center_horizontal">
                <Button
                    android:id="@+id/button_equals"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="="
                    android:layout_span="2"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_del"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/del"
                    style="@style/Buttons"/>

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="C"
                    android:layout_margin="6sp"
                    style="@style/Buttons"
                    android:background="@drawable/clear_button"/>

            </TableRow>

        </TableLayout>

    </ViewFlipper>

</LinearLayout>
